{
    "version": 1,
    "name": "MainInputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "7ae312ad-20ea-4d2f-841c-e323a9eecc28",
            "actions": [
                {
                    "name": "FirstTouchPress",
                    "type": "Button",
                    "id": "a39e9c99-ec81-4630-a87b-20cbcf2c854a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "FirstTouchPosition",
                    "type": "Value",
                    "id": "d0aae5f3-3ac0-49e6-b4ae-83939263da7e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FirstTouchMove",
                    "type": "Value",
                    "id": "af6cf4ba-fd2f-48a3-8f43-c5731ab777a5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondTouchPress",
                    "type": "Button",
                    "id": "d0d67b95-a1f3-414e-9dde-ad540f12f6b1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondTouchPosition",
                    "type": "Value",
                    "id": "f38bdd01-a3bc-494d-82f6-f1117405a9ae",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondTouchMove",
                    "type": "Value",
                    "id": "c95765a7-b5cf-44a9-9882-2f4f0645058c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraZoom",
                    "type": "Value",
                    "id": "30147813-9753-451f-ad30-b27d6cf26657",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraMove",
                    "type": "Value",
                    "id": "48a33353-d903-4a58-a922-16311271c3bd",
                    "expectedControlType": "Vector2",
                    "processors": "InvertVector2",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3acc9355-f06d-494f-a65a-dcbe655f5150",
                    "path": "<Touchscreen>/touch0/delta",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": ";TouchScreen",
                    "action": "FirstTouchMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2bde3a2e-a10e-40aa-a197-5d5ca4840ce8",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "Press",
                    "processors": "",
                    "groups": ";TouchScreen",
                    "action": "FirstTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21a296fc-b517-4fb5-a103-758c1b032c74",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": ";TouchScreen",
                    "action": "FirstTouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f63ff30e-f9a0-4216-a8eb-49daf513027d",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": ";TouchScreen",
                    "action": "SecondTouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43257946-3e9e-48a0-ac30-4ad758fbf0dd",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": ";TouchScreen",
                    "action": "SecondTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e58d4fab-2c66-4346-8375-b38595215507",
                    "path": "<Touchscreen>/touch1/delta",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": ";TouchScreen",
                    "action": "SecondTouchMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd6f4327-1609-4063-81c6-628e6c62216e",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "CameraZoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4d64948-7f48-4354-adaf-214ea16f81d2",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "CameraZoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "8ff2c7ea-3dd9-4447-b577-e4f4d5e712cb",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c379de1f-785d-45c5-81fa-71914fdbf512",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "90814043-bfc1-4497-bdee-225019cf2b0f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9315bd3a-00e9-4afd-bc17-b3f07a8f9174",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1e7d4680-5b6b-4072-b508-1a49a349221a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "TouchScreen",
            "bindingGroup": "TouchScreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}